fix visible errors

--- a/src/components/NewMovie/NewMovie.scss
+++ b/src/components/NewMovie/NewMovie.scss
@@ -7,15 +7,3 @@ input {
   outline: none;
   margin-bottom: 25px;
 }
-
-.error1 {
-  position: absolute;
-  top: 23%;
-  color: red;
-}
-
-.error2 {
-  position: absolute;
-  top: 31%;
-  color: red;
-}
